...
        component={HomeScreen}
        options={{ tabBarLabel: 'Home' }}
      />
      <Tab.Screen
        name="TemplatesTab"
        component={BrowseTemplatesScreen}
        options={{ tabBarLabel: 'Templates' }}
      />
      <Tab.Screen
        name="OrdersTab"
        component={MyOrdersScreen}
        options={{ tabBarLabel: 'Orders' }}
      />
...
